# mrmat-xmas-2024

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build.yml  main_mrmat-xmas.yml
src/admin/: index.html  package-lock.json  package.json  vite.config.ts
src/admin/src/: App.vue  main.ts  quasar-variables.sass  router.ts
src/admin/src/components/: PersonCard.vue  PersonImage.vue
src/admin/src/composables/: useAuth.ts  useBlob.ts  useCosmos.ts
src/admin/src/layouts/: Default.vue
src/admin/src/pages/: Landing.vue  PersonEdit.vue  PersonNew.vue
src/admin/src/stores/: useXmasStore.ts
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/public/: site.webmanifest
src/frontend/src/: App.vue  colours.css  i18n.ts  main.ts  router.ts  style.css  style.scss
src/frontend/src/components/: AppError.vue  AppLoading.vue
src/frontend/src/composables/: useAppInsights.ts  useStore.ts
src/frontend/src/layouts/: Default.vue
src/frontend/src/pages/: Identified.vue  Landing.vue  Main.vue  Stranger.vue
src/mrmat_xmas_2024/: __init__.py  app.py  config.py  model.py
var/: sidebar.xcf
var/azure-webapp/backend/scripts/: azure-postbuild.sh  azure-prebuild.sh  startup.sh
